syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    Records inserted into this table will result in the cancellation of all active/cancelable orders for the indicated SpiderRock routing code
*/    
message SpdrRouteCancel {
    message PKey {
        
        string routing_code = 10; // SR routing code
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    SysEnvironment sys_environment = 100; // original (source) sys environment [Stable, Current, etc]
    RunStatus run_status = 103; // original (source) run status [Prod,Beta]
    string cxl_reason = 106;
    string alt_cancel_id = 109; // usually client FIX clOrdId of the inbound OrderCancel request
    string engine_name = 122; // set by the engine handling event (should be blank on arrival)
    string modified_by = 115; // user who last modified this record
    SysEnvironment modified_in = 118;
    google.protobuf.Timestamp timestamp = 121; // timestamp of last modification
}


